[package]
name = "echoes"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
pin-project-lite = { version = "0.2" }
hyper = { version = "1", features = ["full"] }
bytes = "1.9.0"
http-body-util = { version = "0.1.2" }
http = "1.2.0"
tokio-rustls = "0.26.1"
rustls = "0.23.23"
rustls-native-certs = "0.8.1"
log = "0.4"
fern = { version = "0.7.1", features = ["reopen-1", "date-based", "colored"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = {version = "1"}